--- a/src/pages/murmurs/index.astro
+++ b/src/pages/murmurs/index.astro
@@ -28,7 +28,8 @@ const renderedMurmurs = await Promise.all(sortedMurmurs.map(async (entry) => {
     <!-- Grid Layout -->
     <div class='grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6'>
       {renderedMurmurs.map(({ entry, summary }, index) => (
-        <article 
+        <a 
+          href={`/murmurs/${entry.id}`}
           class='group flex flex-col bg-card border border-border rounded-xl overflow-hidden hover:shadow-lg transition-all duration-300 hover:-translate-y-1'
           style={`animation: fade-up 0.5s ease-out backwards ${index * 100}ms`}
         >
@@ -91,7 +92,7 @@ const renderedMurmurs = await Promise.all(sortedMurmurs.map(async (entry) => {
               </time>
             </div>
           </div>
-        </article>
+        </a>
       ))}
     </div>
   </div>
